# what_the_fit_bot

./: .gitignore  README.md  pyproject.toml  run_container.bat  what_the_fit_bot.pyproj  what_the_fit_bot.sln
src/: main.py
src/core/: convert_cyrillic_to_hex.py  get_basket_id.py  image.py  product.py  products.py  sort_type.py  wb_parse.py  wb_search.py
src/core/ai/: color_and_labels.py  image_processing.py
src/core/parser/: criteria.py  get_basket_id.py  image.py  product.py  products.py  wb_parse.py  wb_search.py
src/core/router/: router.py
src/core/task_pool/: pool.py
src/core/telegram/: main.py  states.py
src/core/telegram/handlers/: find_by_photo.py  general_recommend.py  pick_by_style.py
src/core/telegram/utils/: navigation.py
tests/: test_wb_search.py
