[build-system]
requires = ["setuptools>=78.1.0"]  
build-backend = "setuptools.build_meta"

[project]
name = "what_the_fit_bot"
version = "0.1"
authors = [{ name = "None", email = "example@email.com" }]
description = "A telegram bot that recognizes clothes and their style, and suggests similar options from the internet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "pip==25.0.1",
    "urllib3==2.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]  # pip install .[dev]

[tool.setuptools]
packages = ["core"]  
package-dir = {"" = "src"}