[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "what_the_fit_bot"
version = "0.1"
authors = [{ name = "None", email = "example@email.com" }]
description = "A telegram bot that recognizes clothes and their style, and suggests similar options from the internet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "pip==25.0.1",
    "urllib3==2.3.0",
    "setuptools==78.1.0",
    "pillow==11.2.1",
    "python-telegram-bot==22.1",
    "python-dotenv==1.1.0",
    "tensorflow==2.19.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5"]  # pip install .[dev]

[tool.setuptools]
packages = { find = { where = ["src"] } }  
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
